--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-	
   "dependencies": {
-  	"express": "4.13.3"
+    "express": "^4.13.4"
   },
   "repository": {
     "type": "git",
@@ -20,8 +19,5 @@
   "bugs": {
     "url": "https://github.com/AGolumbovsky/auto-mate/issues"
   },
-  "homepage": "https://github.com/AGolumbovsky/auto-mate",
-  "dependencies": {
-    "express": "^4.13.4"
-  }
+  "homepage": "https://github.com/AGolumbovsky/auto-mate"
 }
